--- a/about.html
+++ b/about.html
@@ -10,5 +10,8 @@
       <b>#! About</b>
     </div>
     <p>Yo, wait is "yo" still a thing??? Idk so my name is darksoul at least my internet name and let me be clear i am not a fan of the game darksoul in fact i never played it in my life. 18 y/o wannabe cybersecurity researcher sometimes programmer and now you can tell English is not my first language in fact we were once ruled by an English Country ok too much information. I sometimes(actually sometimes) write blogs about anything that fascinates me I'm no expert at anything let me be clear so if you find any error in blogs im sorry and you can correct me at (Under Consideration)</p>
+    <br>
+    <br>
+    <a href="./index.html">Get Back To Main Page</a>
 </body>
 </html>
