--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
 <head>
 	<title>~DarkSoul</title>
+	<meta name="viewport" content="width=320, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+	<meta name="viewport" content="width=device-width, target-densityDpi=medium-dpi"/>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<center><img src="gohan.gif" width="250" height="150"></center>
+	<center><img src="imgs/gohan.gif" width="250" height="150"></center>
 	<nav>
-		<ul>
-			<li><a href="">Home</a></li>
-			<li><a href="">About</a></li>
-			<li><a href="">Blogs</a></li>
+		<ul class="nav">
+			<li class="navs"><a href="">Home</a></li>
+			<li class="navs"><a href="/~darksoul/about.html">About</a></li>
+			<li class="navs"><a href="/~darksoul/blog">Blogs</a></li>
+            <li class="navs"><a href="/~darksoul/people.html">People</a></li>
 		</ul>
 	</nav>
 	<hr>
@@ -19,9 +22,16 @@
       <b>#! ~DarkSoul</b>
     </div>
     <p>
-    	<i>"To live is to risk it all; otherwise you’re just an inert chunk of randomly assembled molecules drifting wherever the universe blows you"</i>
+    	<i>"To live is to risk it all; otherwise youre just an inert chunk of randomly assembled molecules drifting wherever the universe blows you"</i>
+    	<br>
     </p>
 </div>
 </div>
+<br>
+<hr>
+<center>
+	<img src="imgs/88x31_w3c_valid_css.png" alt="Valid CSS" height="31" width="88" />
+    <img src="imgs/88x31_w3c_valid_xhtml11.png" alt="Valid XHTML 1.1" height="31" width="88" />
+</center>
 </body>
 </html>
